Fix Layout Issues for medium-large windows
- Change flex properties of title box

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -158,7 +158,7 @@ section {
   order: 2;
 
   @include media($desktop) {
-    flex: 1 60%;
+    flex: 4 50%;
     // margin-left: $small-spacing / 2;
     // margin-right: $small-spacing / 2;
     padding-top: $header-height;
